backend code update

--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>simon game</title>
+    <title>Simon Game</title>
     <link rel="stylesheet" href="simon.css">
 </head>
 <body>
     <h1>SIMON SAYS GAME</h1>
-    <h3>press any key to start game</h3>
+    <h3>Press any key or click the button to start the game</h3>
+    <button id="startBtn">Start Game</button>
     <div class="box-container">
         <div class="line-one">
-            <div class="red btn" type="button" id="red"></div>
-            <div class="blue btn" type="button" id="blue"></div>
+            <div class="red btn" id="red"></div>
+            <div class="blue btn" id="blue"></div>
         </div>
         <div class="line-two">
-            <div class="green btn" type="button" id="green"></div>
-            <div class="yellow btn" type="button" id="yellow"></div>
+            <div class="green btn" id="green"></div>
+            <div class="yellow btn" id="yellow"></div>
         </div>
     </div>
     <script src="simon.js"></script>
